--- a/machine.html
+++ b/machine.html
@@ -126,7 +126,7 @@ Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p
 processing experience to join the ACV Labs team, working on a variety of cutting 
 edge?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clarifai/jobs/1784298?gh_jid=1784298'>Job Application for Applied Machine Learning Engineer at Clarifai</a></h5> 
+<h5><a href='https://boards.greenhouse.io/clarifai/jobs/1784298?gh_jid=1784298'>Job Application for Applied Machine Learning Engineer at Clarifai</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... You'll join our Applied Machine Learning Team and help our team drive customer 
 acquisition and revenue growth in 2019. You value collaboration and want to?...</p>
@@ -289,7 +289,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -310,7 +310,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/siftscience/jobs/1771754'>Job Application for Senior Software Engineer - Machine Learning Platform at Sift </a></h5> 
+<h5><a href='https://boards.greenhouse.io/siftscience/jobs/1771754'>Job Application for Senior Software Engineer - Machine Learning Platform at Sift </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -326,7 +326,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://mercari.workable.com/j/DEB330A0B9?viewed=true'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/j/DEB330A0B9?viewed=true'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 ?? ... Apply online for the job of Software Engineer, Machine Learning [New Graduate 
 Position] at Mercari, inc.</p>
@@ -366,7 +366,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
+<h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -387,7 +387,7 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/houzz/78a7d404-5d5f-4d91-a1b0-3a0867fe3d46'>Houzz - Machine Learning Engineer | Personalization</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/78a7d404-5d5f-4d91-a1b0-3a0867fe3d46'>Houzz - Machine Learning Engineer | Personalization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -421,7 +421,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/splunk/job/ofYkafwr'>Splunk Careers - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/ofYkafwr'>Splunk Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -435,7 +435,7 @@ sizes, and allows our customers to view and analyze their foot-traffic data. We'
 <p>Jul 2, 2019 ... MSK Data Products is a multidisciplinary team of designers, software engineers 
 and data scientists working inside MSK. Our mission is to transform how?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4354328002'>Job Application for Manager, Applied Machine Learning  at WeWork Global Technology</a></h5> 
+<h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4354328002'>Job Application for Manager, Applied Machine Learning  at WeWork Global Technology</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -451,7 +451,7 @@ and data scientists working inside MSK. Our mission is to transform how?...</p>
 <p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/returnly/4f606beb-5532-4900-8c70-4c31b1b951cb'>Returnly - Senior Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/returnly/4f606beb-5532-4900-8c70-4c31b1b951cb'>Returnly - Senior Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -466,7 +466,7 @@ are?...</p>
 <p>2 days ago ... As a Machine Learning Engineer at Lastline, you will develop new machine 
 learning models and improve existing ones to enhance our network detection?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/workfusion/67ddd885-308b-44be-938e-9b2ce7b2551f'>WorkFusion - Software Engineer (RPA &amp; Machine Learning)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/workfusion/67ddd885-308b-44be-938e-9b2ce7b2551f'>WorkFusion - Software Engineer (RPA &amp; Machine Learning)</a></h5> 
 <p><span class="badge badge-light">Minsk</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -474,7 +474,7 @@ learning models and improve existing ones to enhance our network detection?...</
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
